[project]
name = "{{cookiecutter.project_name}}"
description = "{{cookiecutter.project_description}}"
authors = [
    {name = "{{cookiecutter.author}}"}
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9,<4.4"
dynamic = ["version"]

keywords = []

dependencies = []

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "setuptools-scm"]

[tool.setuptools.dynamic]
version = {attr = "project.__version__"}

[project.optional-dependencies]
dev = [
    "pip-tools",
    "pre-commit",
    "pytest",
    "mypy",
    "isort",
    "black"
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
